# alchimiste

./: .gitignore  README.md  justfile  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/eval/: default.yaml
configs/local/: default.yaml.example
configs/model/: encoder_hf.yaml  neobert.yaml
configs/training/: default.yaml
docs/autoresearch/: log.md  overnight-2026-05-27.md  plan.md  roadmap-2026-05-25.md
docs/cleanup-model/: design.md  requirements.md  tasks.md
docs/superpowers/plans/: 2026-05-21-dataset-puller.md
docs/superpowers/specs/: 2026-05-22-mlflow-dataset-input-design.md
scripts/: overnight_head_sweep.sh
src/alchimiste/: __init__.py  cli.py
src/alchimiste/cleaner/data/: align.py  label_stats.py  loader.py  normalize.py  oxen_meta.py  split.py
src/alchimiste/cleaner/eval/: failures.py  iou.py  req003.py  run.py  threshold.py
src/alchimiste/cleaner/inference/: cli.py  decode.py  pyfunc.py
src/alchimiste/cleaner/models/: base.py  encoder_hf.py  heads.py
src/alchimiste/cleaner/training/: finalize.py  loop.py  mlflow_io.py
src/alchimiste/datasets/: client.py  oxen.py  sync.py
tests/: test_smoke.py
tests/cleaner/: test_align.py  test_decode.py  test_encoder_hf.py  test_eval_run.py  test_failures.py  test_finalize_clip.py  test_inference_cli.py  test_iou.py  test_label_stats.py  test_loader.py  test_mlflow_autoresearch_tag.py  test_mlflow_dataset.py  test_mlflow_io.py  test_mlflow_run_name.py  test_models_base.py  test_normalize.py  test_oxen_meta.py  test_req003.py  test_split.py  test_split_seed_decoupled.py  test_threshold.py  test_tokenization_cache.py  test_training_loop.py  test_training_seed.py
tests/datasets/: test_cli.py  test_client.py  test_oxen.py  test_sync.py
