[project]
name = "alchimiste"
version = "0.1.0"
description = "Two ML models: readability-style DOM node extraction and text cleanup, for use with alembic."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jean-Francois Im", email = "jeanfrancois.im@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "hydra-core>=1.3.2",
    "mlflow>=3.12.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "polars-lts-cpu>=1.0",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[project.scripts]
alchimiste = "alchimiste.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
